--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/comp426-2022-fall/a03-DheyaM/issues"
   },
-  "homepage": "https://github.com/comp426-2022-fall/a03-DheyaM#readme"
+  "homepage": "https://github.com/comp426-2022-fall/a03-DheyaM#readme",
+  "dependencies": {
+    "minimist": "^1.2.7"
+  }
 }
