--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "roll-dice": "./bin/cli.js"
   },
   "scripts": {
-    "test": "npm roll.js"
+    "test": "roll-dice --sides=10 --dice=2 --rolls=3"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/comp426-2022-fall/a03-DheyaM#readme",
   "dependencies": {
-    "minimist": "^1.2.7"
-  }
+    "minimist": "^1.2.7",
+    "roll": "^1.3.1"
+  },
+  "type": "module"
 }
